<resources>
    <string name="app_name">PracticalTest01var08</string>
    <string name="action_settings">Settings</string>
    <string name="but1">Top Left</string>
    <string name="but2">Top Right</string>
    <string name="but3">Center</string>
    <string name="but4">Bottom Left</string>
    <string name="but5">Bottom Right</string>
    <string name="butcancel">Cancel</string>
    <string name="butverify">Verify</string>
    <string name="butother">Navigate to secondary activity</string>
    <string name="title_activity_practical_test01_var08_secondary">
        PracticalTest01Var08SecondaryActivity
    </string>
</resources>
